VS Code 2nd check

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 </head>
 <body>
     <h1>Hello World!<h1>
-        <p>test for github authentication check<p>
-            <p>check two<p>
-                <p>Check 3
-                </p>
+        <p>github-VSCode checks</p>
+            
 
 </body>
 </html>
