--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="love running, running club, ireland, dublin">
+    <meta name="Description" content="Love Running club for runners in Dublin, Ireland"/>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Love Running</title>
 </head>
 <body>
     <h1>Hello World!<h1>
