--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World!<h1>
+    <header>Header content</header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running locations, distances and times
+    </section>
+    <footer>
+        Social Media links here
+    </footer>
+
 </body>
 </html>
