--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
-            <h1> Love Running</h1>
+            <h1 id="logo">Love Running</h1>
         </a>
         <nav>
             <ul id="menu">
@@ -29,6 +30,10 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Phoenix Park</h3>
+        </div>
     </section>
     <section>
         Club Ethos
@@ -39,6 +44,6 @@
     <footer>
         Social media links here
     </footer>
-
 </body>
+
 </html>
