--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </section>
     <section id="club-ethos">
-        <h1>Why Love Running With Us?</h1>
+        <h1 id="welcome">Why Love Running With Us?</h1>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Feel Healthy</h2>
@@ -61,15 +61,21 @@
             When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, inspire you to try new events.
             </p>
         </div>
-        <div class="right-about-heading">
+            <div class="right-about-heading">
             <h2>Feel Strong</h2>
             <hr>
             <p>
             Running strengthens your heart by pumping blood more effectively through your body.
             </p>
+            </div>
         </div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg">
+
+                </div>
+            </div>
         </div>
-        <div id="center-about">Center</div>
     </section>
     <section>
         Running locations, distances and times
