Add styling to social media icons/links

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         
     </section>
-    <footer>
+    <footer class="social-networks">
         <ul>
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
@@ -136,7 +136,7 @@
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
-        </ul>>
+        </ul>
     </footer>
 
     <!-- font awesome script -->
