--- a/gallery.html
+++ b/gallery.html
@@ -30,15 +30,15 @@
     </header>
 
     <section id="photos">
-        <img src="/assets/images/athletes.jpg" alt="Two athletes runnning together">
-        <img src="/assets/images/girls.jpg" alt="Three women at a colour run">
-        <img src="/assets/images/running_gang.jpg" alt="Long distance running event with many runners">
-        <img src="/assets/images/runner4.jpg" alt="Woman in pink running by the sea">
-        <img src="/assets/images/runner3.jpg" alt="Triathlete running at the shoreline">
-        <img src="/assets/images/runner2.jpg" alt="Woman running at the air force marathon">
-        <img src="/assets/images/runner1.jpg" alt="Woman running in Phoenix park listing to music">
-        <img src="/assets/images/mud-run.jpg" alt="Two woman taking selfie at mud run event">
-        <img src="/assets/images/man.jpg" alt="Man covered in powdered paint at color run">
+        <img src="assets/images/athletes.jpg" alt="Two athletes runnning together">
+        <img src="assets/images/girls.jpg" alt="Three women at a colour run">
+        <img src="assets/images/running_gang.jpg" alt="Long distance running event with many runners">
+        <img src="assets/images/runner4.jpg" alt="Woman in pink running by the sea">
+        <img src="assets/images/runner3.jpg" alt="Triathlete running at the shoreline">
+        <img src="assets/images/runner2.jpg" alt="Woman running at the air force marathon">
+        <img src="assets/images/runner1.jpg" alt="Woman running in Phoenix park listing to music">
+        <img src="assets/images/mud-run.jpg" alt="Two woman taking selfie at mud run event">
+        <img src="assets/images/man.jpg" alt="Man covered in powdered paint at color run">
     </section>
    
     <footer class="social-networks">
